Fixed odd spacing on landing page

--- a/home.css
+++ b/home.css
@@ -36,7 +36,7 @@ body {
 }
 
 .title {
-  margin-top: -5vw;
+  margin-top: 0;
   font-size: max(10vw, 2em, 5rem);
 }
 
@@ -55,6 +55,7 @@ body {
   align-items: space-between;
   justify-content: center;
   gap: 2vw; 
+  margin-top: -5vw;
 }
 
 .button {
@@ -71,7 +72,7 @@ body {
   color: var(--text);
   border: 1px solid var(--text);
   font-weight: bold;
-  font-size: max(1.5vw, 1em, 1.5rem);
+  font-size: max(1vw, 1.5em, 1.75rem);
   transform: scale(1);
   transition: all 0.3s ease-in-out;
 }
@@ -96,7 +97,7 @@ body {
   color: var(--text);
   border: 1px solid var(--text);
   font-weight: bold;
-  font-size: max(1.5vw, 1em, 1.5rem);
+  font-size: max(1vw, 1.5em, 1.75rem);
   transform: scale(1);
   transition: all 0.3s ease-in-out;
 }
